# eth-whale-extractor

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
docs/: schema.md  sources.md
src/eth_whale_extractor/: __init__.py  cli.py  core.py
tests/: test_core.py
