[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-whale-extractor"
version = "0.1.0"
description = "Extract public Ethereum wallets with balances above 25 ETH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eth-whale-extractor = "eth_whale_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
